--- a/pom.xml
+++ b/pom.xml
@@ -189,6 +189,13 @@
             </dependency>
 
             <dependency>
+                <groupId>com.google.jimfs</groupId>
+                <artifactId>jimfs</artifactId>
+                <version>1.0</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
                 <groupId>org.apache.lucene</groupId>
                 <artifactId>lucene-core</artifactId>
                 <version>${lucene.maven.version}</version>
@@ -368,7 +375,7 @@
             <dependency>
                 <groupId>io.netty</groupId>
                 <artifactId>netty</artifactId>
-                <version>3.10.0.Final</version>
+                <version>3.10.3.Final</version>
             </dependency>
 
             <dependency>
